--- a/arch/arm/configs/sprd_sharkl5_defconfig
+++ b/arch/arm/configs/sprd_sharkl5_defconfig
@@ -3502,6 +3502,7 @@ CONFIG_COMMON_CLK=y
 # CONFIG_COMMON_CLK_PIC32 is not set
 # CONFIG_COMMON_CLK_VC5 is not set
 CONFIG_SPRD_COMMON_CLK=y
+# CONFIG_SPRD_SC9832E_CLK is not set
 # CONFIG_SPRD_SC7731E_CLK is not set
 CONFIG_SPRD_SHARKL5_CLK=y
 CONFIG_HWSPINLOCK=y
