--- a/drivers/clk/sprd/Kconfig
+++ b/drivers/clk/sprd/Kconfig
@@ -19,8 +19,8 @@ config SPRD_SC9863A_CLK
 
 config SPRD_SC9832E_CLK
 	tristate "Support for the Spreadtrum Sharkle clocks"
-	depends on (ARM64 && ARCH_SPRD) || COMPILE_TEST
-	default ARM64 && ARCH_SPRD
+	depends on (ARM64 && ARCH_SPRD) || (ARM && ARCH_SPRD) || COMPILE_TEST
+	default (ARM64 && ARCH_SPRD) || (ARM && ARCH_SPRD)
 
 config SPRD_SC7731E_CLK
 	tristate "Support for the Spreadtrum Pike2 clocks"
