--- a/arch/arm64/boot/dts/sprd/ums512.dtsi
+++ b/arch/arm64/boot/dts/sprd/ums512.dtsi
@@ -266,6 +266,17 @@
 			<GIC_PPI 11 IRQ_TYPE_LEVEL_HIGH>, /* Virtual PPI */
 			<GIC_PPI 10 IRQ_TYPE_LEVEL_HIGH>; /* Hipervisor PPI */
 	};
+	pmu {
+		compatible = "arm,armv8-pmuv3";
+		interrupts = <GIC_SPI 112 IRQ_TYPE_LEVEL_HIGH>,
+			<GIC_SPI 113 IRQ_TYPE_LEVEL_HIGH>,
+			<GIC_SPI 114 IRQ_TYPE_LEVEL_HIGH>,
+			<GIC_SPI 115 IRQ_TYPE_LEVEL_HIGH>,
+			<GIC_SPI 116 IRQ_TYPE_LEVEL_HIGH>,
+			<GIC_SPI 117 IRQ_TYPE_LEVEL_HIGH>,
+			<GIC_SPI 118 IRQ_TYPE_LEVEL_HIGH>,
+			<GIC_SPI 119 IRQ_TYPE_LEVEL_HIGH>;
+	};
 
 	 gsp: sprd-gsp {
 		compatible = "sprd,gsp-r8p0-sharkl5pro";
