Bug #1073066 arm: dts: add sc2720/sc2721 dts node
[root cause  ] add sc2720/sc2721 glb reg dts node
[changes     ] add sc2720/sc2721 glb reg dts node
[side effects] no
[self test   ]:yes
[download normally]: yes
[power on/off normally]: yes
[do common repository/branch inspection]: yes
[is there dependence]: no
[confirm dependent commit]: yes
[board]: pike2
[test case]: N/A
[reviewers   ] bruce.chen
[change_type ] new feature
[tag_product ] common

add sc2720/sc2721 glb reg dts node for pike2

Change-Id: I0bc8c97b3f8881df13e11bbaa9d596d572b4f559
Signed-off-by: Xiaopeng Bai <xiaopeng.bai@unisoc.com>

--- a/arch/arm/boot/dts/sc2721.dtsi
+++ b/arch/arm/boot/dts/sc2721.dtsi
@@ -55,6 +55,11 @@
 			nvmem-cell-names = "big_scale_calib", "small_scale_calib";
 		};
 
+		syscon@c00 {
+			compatible = "sprd,sc27xx-syscon";
+			reg = <0xc00>, <0xecc>;
+		};
+
 		power-controller@c00 {
 			compatible = "sprd,sc27xx-regulator", "sprd,sc2721-regulator";
 
