--- a/arch/arm/boot/dts/sc2720.dtsi
+++ b/arch/arm/boot/dts/sc2720.dtsi
@@ -54,6 +54,11 @@
 			nvmem-cell-names = "big_scale_calib", "small_scale_calib";
 		};
 
+		syscon@c00 {
+			compatible = "sprd,sc27xx-syscon";
+			reg = <0xc00>, <0xe18>;
+		};
+
 		power-controller@c00 {
 			compatible = "sprd,sc27xx-regulator", "sprd,sc2720-regulator";
 
