Bug #1095171 arm: dts: add pwm device node for Pike2 platform
[root cause  ] add pwm driver
[changes     ] add pwm driver
[side effects] no
[self test   ]:yes
[download normally]:yes
[power on/off normally]:yes
[do common repository/branch inspection]:yes
[is there dependence]:no
[confirm dependent commit]:no
[board]:pike2
[test case]:pwm test
[reviewers   ] nemo.han
[change_type ] bringup --> sprd_chip_support
[tag_product ] common

Add pwm device node for Pike2 platform.

Change-Id: I4a8252fe75a5e949587301a036d5f3707a25012c
Signed-off-by: Chris Wu <chris.wu@unisoc.com>

--- a/arch/arm/boot/dts/pike2.dtsi
+++ b/arch/arm/boot/dts/pike2.dtsi
@@ -210,6 +210,24 @@
 				clocks = <&aonapb_gate CLK_AON_DMA_EB>;
 			};
 
+			pwms: pwm@40260000 {
+				compatible = "sprd,pike2-pwm", "sprd,sharkl5-pwm";
+				reg = <0x40260000 0x10000>;
+				clock-names = "clk_parent",
+					"clk_pwm0", "clk_pwm0_eb",
+					"clk_pwm1", "clk_pwm1_eb",
+					"clk_pwm2", "clk_pwm2_eb";
+				clocks = <&ext_26m>,
+					<&aon_clk CLK_PWM0>,
+					<&aonapb_gate CLK_PWM0_EB>,
+					<&aon_clk CLK_PWM1>,
+					<&aonapb_gate CLK_PWM1_EB>,
+					<&aon_clk CLK_PWM2>,
+					<&aonapb_gate CLK_PWM2_EB>;
+				#pwm-cells = <2>;
+				status = "disabled";
+			};
+
 			adi_bus: spi@403c0000 {
 				compatible = "sprd,pike2-adi";
 				reg = <0x403c0000 0x10000>;
