Bug #1073066 arm: config: open pmic syscon config
[root cause  ]  open pmic syscon config
[changes     ]  open pmic syscon config
[side effects] no
[self test   ]:yes
[download normally]: yes
[power on/off normally]: yes
[do common repository/branch inspection]: yes
[is there dependence]: no
[confirm dependent commit]: yes
[board]: pike2
[test case]: N/A
[reviewers   ] bruce.chen
[change_type ] new feature
[tag_product ] common

open pmic syscon config  for pike2

Change-Id: Ib422b78123fe96259bdd0c113e4a4afc1761f205
Signed-off-by: Xiaopeng Bai <xiaopeng.bai@unisoc.com>

--- a/arch/arm/configs/sprd_pike2_defconfig
+++ b/arch/arm/configs/sprd_pike2_defconfig
@@ -3308,7 +3308,7 @@ CONFIG_ARM_ARCH_TIMER_EVTSTREAM=y
 #
 # CONFIG_SPRD_MEMDISK is not set
 # CONFIG_SPRD_7SRESET is not set
-# CONFIG_SPRD_PMIC_SYSCON is not set
+CONFIG_SPRD_PMIC_SYSCON=y
 # CONFIG_SPRD_IOMMU is not set
 
 #
