--- a/arch/arm64/boot/dts/sprd/sharkl5Pro.dtsi
+++ b/arch/arm64/boot/dts/sprd/sharkl5Pro.dtsi
@@ -1504,6 +1504,20 @@
 		clock-output-names = "rco-2m";
 	};
 
+	dphy_273m: dphy-273m {
+		compatible = "fixed-clock";
+		#clock-cells = <0>;
+		clock-frequency = <273000000>;
+		clock-output-names = "dphy-273m";
+	};
+
+	dphy_204m8: dphy-204m8 {
+		compatible = "fixed-clock";
+		#clock-cells = <0>;
+		clock-frequency = <204800000>;
+		clock-output-names = "dphy-204m8";
+	};
+
 	cache_efuse: efuse@15c00 {
 		compatible = "sprd,sharkl5-cache-efuse", "sprd,sharkl5pro-cache-efuse";
 		reg = <0 0x15c00 0 0x3ff>;
