Bug #1066023 arm: dts: androidp pike2/sharkle add gpu
[root cause  ] 1066023 arm:dts: androidp pike2/sharkle add gpu
[changes     ] androidp pike2/sharkle add gpu
[side effects] GPU
[self test   ]: compiler ok
[download normally]: No
[power on/off normally]: No
[do common repository/branch inspection]: Yes
[is there dependence]: No
[confirm dependent commit]: No
[board]: sp7731e,sp9832e
[test case]: compiler ok
[reviewers   ] zhongjun.chen
[change_type ] AOB --> sprd_adaptation
[tag_product ] common

pike2/sharkle add gpu dts.

Change-Id: Ie200f61c5a8788fc75d0762555b8fc3dc06095b3
Signed-off-by: Jassmine Meng <jassmine.meng@unisoc.com>

--- a/arch/arm/boot/dts/pike2.dtsi
+++ b/arch/arm/boot/dts/pike2.dtsi
@@ -328,6 +328,58 @@
 				nvmem-cell-names = "thm_sign_cal", "thm_ratio_cal", "thm_delta_cal";
 			};
 		};
+
+		mm {
+			compatible = "simple-bus";
+			#address-cells = <1>;
+			#size-cells = <1>;
+			ranges;
+
+			gpu: gpu@60000000 {
+				compatible = "sprd,mali-midgard";
+				reg = <0x60000000 0x4000>;
+				gpu-supply = <&vddcore>;
+				syscons = <&pmu_apb_regs
+					REG_PMU_APB_PD_GPU_TOP_CFG
+					MASK_PMU_APB_PD_GPU_TOP_FORCE_SHUTDOWN>;
+				syscon-names = "top_force_shutdown";
+
+				interrupts = <GIC_SPI 39 IRQ_TYPE_LEVEL_HIGH>,
+					<GIC_SPI 39 IRQ_TYPE_LEVEL_HIGH>,
+					<GIC_SPI 39 IRQ_TYPE_LEVEL_HIGH>;
+				interrupt-names = "JOB",
+					"MMU",
+					"GPU";
+
+				operating-points = <
+					/* kHz    uV */
+					153600    900000
+					256000    900000
+					384000    900000
+					512000    900000
+					533000    900000
+					600000    1000000
+					>;
+
+				sprd,dfs-lists = <
+					/* kHz  uV      idx div */
+					153600  900000   2    1
+					256000  900000   4    1
+					384000  900000   6    1
+					512000  900000   7    1
+					533000  900000   8    1
+					600000  1000000  8    1
+					>;
+
+				sprd,dfs-default = <1>;
+				sprd,dfs-scene-extreme = <3>;
+				sprd,dfs-scene-high = <2>;
+				sprd,dfs-scene-medium = <1>;
+				sprd,dfs-scene-low = <0>;
+				sprd,dfs-range-max = <5>;
+				sprd,dfs-range-min = <0>;
+			};
+		};
 	};
 
 	ext_26m: ext-26m {
