Bug #1092832 configs: arm64 open DTC_FLAGS for dtbo merge error
[root cause  ] dtbo merge error for no __symbols__
[changes     ] defconfigs
[side effects] no
[self test   ]:  yes
[download normally]:  yes
[power on/off normally]: yes
[do common repository/branch inspection]: yes
[is there dependence]: no
[confirm dependent commit]: yes
[board]: ums512-1h10
[test case]: build boot
[reviewers   ]  Nianfu.Bai Ruifeng.Zhang

[change_type ] bringup --> sprd_chip_support
[tag_product ] common

Change-Id: I5574653875b151dc249a18257179df882a93074f
Signed-off-by: Cixi.Geng <gengcx@spreadst.com>
(cherry picked from commit 83be7296d72f254ac0d37870ff303c34247a03d8)

--- a/arch/arm64/configs/sprd_sharkl5Pro_defconfig
+++ b/arch/arm64/configs/sprd_sharkl5Pro_defconfig
@@ -545,7 +545,7 @@ CONFIG_CMDLINE=""
 # CONFIG_EFI is not set
 # CONFIG_BUILD_ARM64_APPENDED_DTB_IMAGE is not set
 CONFIG_BUILD_ARM64_DTC=""
-CONFIG_BUILD_ARM64_DTC_FLAGS=""
+CONFIG_BUILD_ARM64_DTC_FLAGS="-@"
 
 #
 # Userspace binary formats
