--- a/arch/arm/configs/sprd_pike2_defconfig
+++ b/arch/arm/configs/sprd_pike2_defconfig
@@ -2001,7 +2001,7 @@ CONFIG_POWER_RESET=y
 # CONFIG_POWER_RESET_SYSCON is not set
 # CONFIG_POWER_RESET_SYSCON_POWEROFF is not set
 # CONFIG_SYSCON_REBOOT_MODE is not set
-# CONFIG_POWER_RESET_SC27XX is not set
+CONFIG_POWER_RESET_SC27XX=y
 CONFIG_POWER_SUPPLY=y
 # CONFIG_POWER_SUPPLY_DEBUG is not set
 # CONFIG_PDA_POWER is not set
@@ -3307,7 +3307,7 @@ CONFIG_ARM_ARCH_TIMER_EVTSTREAM=y
 # Qualcomm SoC drivers
 #
 # CONFIG_SPRD_MEMDISK is not set
-# CONFIG_SPRD_7SRESET is not set
+CONFIG_SPRD_7SRESET=y
 CONFIG_SPRD_PMIC_SYSCON=y
 # CONFIG_SPRD_IOMMU is not set
 
