Bug #1052253 arm64: dts: Modify thermal zone name for sharkl5pro
[root cause  ] project need
[changes     ] modify dts
[side effects] no
[self test   ]: build ok
[download normally]: ok
[power on/off normally]: ok
[do common repository/branch inspection]: no
[is there dependence]: no
[confirm dependent commit]: no
[board]:ums512
[test case]: build ok
[reviewers   ] baolin.wang
[change_type ] bringup --> sprd_chip_support
[tag_product ] common

Modify thermal zone name avoid exceeding the specified length
for sharkl5pro

Change-Id: I45fcc2a4e52ecb14ba676a93239b2f2cb002f715
Signed-off-by: Freeman Liu <freeman.liu@spreadtrum.com>

--- a/arch/arm64/boot/dts/sprd/ums512-mach.dtsi
+++ b/arch/arm64/boot/dts/sprd/ums512-mach.dtsi
@@ -97,13 +97,13 @@
 	};
 
 	thm_zone: thermal-zones {
-		prometheus6_thmzone0: prometheus6-thmzone0 {
+		prometheus6_tzone0: prometheus6-tzone0 {
 			polling-delay-passive = <0>;
 			polling-delay = <0>;
 			thermal-sensors = <&ap_thm0 0>;
 		};
 
-		prometheus6_thmzone1: prometheus6-thmzone1 {
+		prometheus6_tzone1: prometheus6-tzone1 {
 			polling-delay-passive = <0>;
 			polling-delay = <0>;
 			thermal-sensors = <&ap_thm0 1>;
