Bug #1098493 arm: dts: create new board for sp9863a1h10 go 32bit
[root cause  ] create new board
[changes     ] dts
[side effects] no
[self test   ]: yes
[download normally]: yes
[power on/off normally]: yes
[do common repository/branch inspection]: yes
[is there dependence]: no
[confirm dependent commit]: no
[board]: sp9863a
[test case]: build verify
[reviewers   ] Nianfu.Bai Ruifeng.Zhang
[change_type ] bringup --> sprd_chip_support
[tag_product ] common

Change-Id: I6d1fd5020f78a766ac7cbb9d52231ff6e73df7f6
Signed-off-by: Cixi.Geng <gengcx@spreadst.com>

--- a/arch/arm/boot/dts/Makefile
+++ b/arch/arm/boot/dts/Makefile
@@ -1072,12 +1072,14 @@ dtb-$(CONFIG_ARCH_ASPEED) += aspeed-bmc-opp-palmetto.dtb \
 
 dtb-$(CONFIG_ARCH_SPRD) += \
 	sp9832e-1h10-gofu.dtb \
+	sp9863a-1h10_go_32b_Natv.dtb \
 	sp7731e-1h10-native.dtb \
 	ums312-1h10-go.dtb \
 	ums312-2h10-go.dtb
 
 dtbo-$(CONFIG_ARCH_SPRD) += \
 	sp9832e-1h10-gofu-overlay.dtbo \
+	sp9863a-1h10_go_32b_Natv-overlay.dtb \
 	sp7731e-1h10-overlay.dtbo \
 	ums312-1h10-go-overlay.dtbo \
 	ums312-2h10-go-overlay.dtbo
