--- a/arch/arm/boot/dts/sc2721.dtsi
+++ b/arch/arm/boot/dts/sc2721.dtsi
@@ -34,6 +34,10 @@
 			#address-cells = <1>;
 			#size-cells = <1>;
 			hwlocks = <&hwlock 12>;
+			/* Data cells */
+			fgu_calib: calib@6 {
+				reg = <0x6 0x2>;
+			};
 
 			adc_bcal: calib@24 {
 				reg = <0x24 0x2>;
@@ -42,6 +46,32 @@
 			adc_scal: calib@26 {
 				reg = <0x26 0x2>;
 			};
+
+			cc_cal: calib@1a {
+				reg = <0x1a 0x2>;
+			};
+
+			efuse_blk0: calib@0 {
+				reg = <0x0 0x2>;
+			};
+
+			efuse_blk14: calib@28 {
+				reg = <0x28 0x2>;
+			};
+
+			efuse_blk16: calib@2c {
+				reg = <0x2c 0x2>;
+			};
+		};
+
+		pmic_typec: typec@380 {
+			compatible = "sprd,sc27xx-typec", "sprd,sc2721-typec";
+			interrupt-parent = <&sc2721_pmic>;
+			interrupts = <10 IRQ_TYPE_LEVEL_HIGH>;
+			reg = <0x380>;
+			mode = <2>;
+			nvmem-cells = <&cc_cal>;
+			nvmem-cell-names = "cc_calib";
 		};
 
 		pmic_adc: adc@400 {
@@ -55,9 +85,30 @@
 			nvmem-cell-names = "big_scale_calib", "small_scale_calib";
 		};
 
+		pmic_fgu: fgu@a00 {
+			compatible = "sprd,sc27xx-fgu", "sprd,sc2731-fgu";
+			reg = <0xa00>;
+			bat-detect-gpio = <&pmic_eic 9 0>;
+			nvmem-cell-names = "fgu_calib";
+			nvmem-cells = <&fgu_calib>;
+			io-channels = <&pmic_adc 0>, <&pmic_adc 14>;
+			io-channel-names = "bat-temp", "charge-vol";
+			interrupt-parent = <&sc2721_pmic>;
+			interrupts = <3 IRQ_TYPE_LEVEL_HIGH>;
+		};
+
 		syscon@c00 {
 			compatible = "sprd,sc27xx-syscon";
 			reg = <0xc00>, <0xecc>;
+		};
+
+		sprd_audio_codec_ana: audio-codec@700 {
+			compatible = "sprd,sc2721-audio-codec",
+				"sprd,sc27xx-audio-codec";
+			#sound-dai-cells = <1>;
+			reg = <0x700>;
+			interrupts = <6 IRQ_TYPE_NONE>;
+			status = "disabled";
 		};
 
 		power-controller@c00 {
