--- a/arch/arm64/boot/dts/sprd/sp9863a-3c10-overlay.dts
+++ b/arch/arm64/boot/dts/sprd/sp9863a-3c10-overlay.dts
@@ -6,9 +6,10 @@
 	fragment {
 		target-path = "/";
 		__overlay__ {
-			fingerprint@0 {
-				compatible = "microarray,afs121";
-				fpint-gpios = <&ap_gpio 130 0>;
+			sunwave-fp {
+				compatible = "sprocomm,finger";
+				fpreset-gpio = <&ap_gpio 131 0>;
+				fpint-gpio = <&ap_gpio 130 0>;
 			};
 
 			pwm_backlight: sprd_backlight {
