Bug #1117383 arm64: dtbo:add microarray fingerprint node
[root cause  ] microarray fingerprint node need to be configured
[changes     ] add microarray fingerprint node in dtbo
[side effects] None
[self test   ]:Pass
[download normally]:Yes
[power on/off normally]:Yes
[do common repository/branch inspection]:Yes
[is there dependence]:No
[confirm dependent commit]:No
[board]:ums512_1h10
[test case]:fingerprint driver test
[reviewers   ] Arvin.Wu Team
[change_type ] feature
[tag_product ] specific

add microarray fingerprint node in dtbo

Change-Id: I7dbb12721da5b2a56da308357b138d47e5bdc7e9
Signed-off-by: Pan.Yang <Pan.Yang@spreadtrum.com>

--- a/arch/arm64/boot/dts/sprd/ums512-1h10-overlay.dts
+++ b/arch/arm64/boot/dts/sprd/ums512-1h10-overlay.dts
@@ -12,6 +12,11 @@
 				compatible = "sprd,sc2355-wifi";
 			};
 
+			fingerprint@0 {
+				compatible = "microarray,afs121";
+				fpint-gpios = <&eic_async 13 0>;
+			};
+
 			gpio-keys {
 				compatible = "gpio-keys";
 
