Bug #1126259,arm: configs: add sprd_vsp/jpg confgs
[root cause  ] pike2 vsp/jpg bringup
[changes     ] config
[side effects] none
[self test   ]:yes
[download normally]:yes
[power on/off normally]:yes
[do common repository/branch inspection]:yes
[is there dependence]:no
[confirm dependent commit]:no
[board]:sc7731e
[test case]:yes
[reviewers   ] leon.li, lei.hu
[change_type ] bringup --> sprd_chip_support
[tag_product ] common

Add sprd_vsp/jpg confgs
For pike2, the vsp calls camera_domain power;
For sharkle, the vsp shares power with AP;
And the others call vsp_domain power.

Change-Id: I160533dcea3702c9ade71dcd6a3327c1d5da6a2c
Signed-off-by: Zhenyan Sun <zhenyan.sun@spreadtrum.com>

--- a/arch/arm64/configs/sprd_sharkle_defconfig
+++ b/arch/arm64/configs/sprd_sharkle_defconfig
@@ -1279,6 +1279,8 @@ CONFIG_MEMORY_STATE_TIME=y
 # CONFIG_CXL_AFU_DRIVER_OPS is not set
 # CONFIG_CXL_LIB is not set
 CONFIG_SPRD_VSP=y
+# CONFIG_SPRD_VSP_PW_DOMAIN is not set
+# CONFIG_SPRD_VSP_CALL_CAM_PW_DOMAIN is not set
 CONFIG_SPRD_JPG=y
 # CONFIG_SPRD_JPG_CALL_VSP_PW_DOMAIN is not set
 
