--- a/arch/arm64/configs/sprd_all_defconfig
+++ b/arch/arm64/configs/sprd_all_defconfig
@@ -1305,6 +1305,8 @@ CONFIG_MEMORY_STATE_TIME=y
 # CONFIG_CXL_AFU_DRIVER_OPS is not set
 # CONFIG_CXL_LIB is not set
 CONFIG_SPRD_VSP=y
+# CONFIG_SPRD_VSP_PW_DOMAIN is not set
+# CONFIG_SPRD_VSP_CALL_CAM_PW_DOMAIN is not set
 # CONFIG_SPRD_JPG is not set
 
 #
