Bug #1117383 arm64: dts: enable spi0 for microarray fingerprint
[root cause  ] fingerprint spi has not been enabled
[changes     ] enable spi0 in dts
[side effects] None
[self test   ]:Pass
[download normally]:Yes
[power on/off normally]:Yes
[do common repository/branch inspection]:Yes
[is there dependence]:No
[confirm dependent commit]:No
[board]:ums512_1h10_ctcc_nosec
[test case]:fingerprint driver test
[reviewers   ] Arvin.Wu Team
[change_type ] feature
[tag_product ] specific

enable spi0 for microarray fingerprint in dts

Change-Id: Iaabda98736b3a1d787324d9d4d008ed95ac0d45f
Signed-off-by: Yan.Yang <Pan.Yang@spreadtrum.com>

--- a/arch/arm64/boot/dts/sprd/ums512-1h10.dts
+++ b/arch/arm64/boot/dts/sprd/ums512-1h10.dts
@@ -518,6 +518,11 @@
 	};
 };
 
+&spi0 {
+	/*used for fingerprint sensor*/
+	status = "okay";
+};
+
 &sdio0 {
 	cd-gpios = <&eic_sync 19 GPIO_ACTIVE_HIGH>;
 };
