Bug #1106380 arm: dts: Open camera device node
[root cause  ] need to port camera drivers to androidq
[changes     ] camera drivers
[side effects] NA
[self test   ]:sharkl3,preview/capture/video ok
[download normally]:yes
[power on/off normally]:yes
[do common repository/branch inspection]:yes
[is there dependence]:no
[confirm dependent commit]:no
[board]:s9863a1h10_Natv-userdebug
[test case]:test camera
[reviewers   ] eddy.wei qin.wang
[change_type ] feature_bugfix
[tag_product ] common

Open camera device node.

Change-Id: I676de4a40298d3d97d526b6d65dce1933ec44877
Signed-off-by: Walker Lu <walker.lu@spreadtrum.com>

--- a/arch/arm/boot/dts/sp9832e-1h10-gofu.dts
+++ b/arch/arm/boot/dts/sp9832e-1h10-gofu.dts
@@ -345,3 +345,36 @@
 &pwms {
 	status = "okay";
 };
+
+&iommu_dcam {
+	status = "okay";
+};
+
+&iommu_isp {
+	status = "okay";
+};
+
+&iommu_cpp {
+	status = "okay";
+};
+
+&dcam {
+	status = "okay";
+};
+
+&isp {
+	sprd,isp-offbuf-count = <4>;
+	status = "okay";
+};
+
+&cpp {
+	status = "okay";
+};
+
+&csi0 {
+	status = "okay";
+};
+
+&csi1 {
+	status = "okay";
+};
